--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -289,7 +289,7 @@ transition: background-position 0.3s ease;:
     .sec3>button>img{
         width: 2em;
         height: 2em;
-        margin-right: 2.1em;
+        margin-right: 2.15em;
     }
     .sec3{
         display: inline;
